--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
   </head>
   <body>
     <h1>Portfolio Websites</h1>
-    <a href="/example">
+    <a href="./example/">
       <h2>Example</h2>
     </a>
-    <a href="/josh">
+    <a href="./josh/">
       <h2>Josh K</h2>
     </a>
-    <a href="/kernah">
+    <a href="./kernah/">
       <h2>Kernah K</h2>
     </a>
-    <a href="/jurgen">
+    <a href="./jurgen/">
       <h2>Jurgen S</h2>
     </a>
-    <a href="/warieshka">
+    <a href="./warieshka/">
       <h2>Warieshka M</h2>
     </a>
   </body>
